<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.7">
  <GVL Name="GVL_SM" Id="{fc3009dd-ed83-4b9a-ae51-b95fbccf717e}">
    <Declaration><![CDATA[VAR_GLOBAL CONSTANT
	
	LINE_ANGLE_SCALING		: REAL := 20.0;
	
END_VAR

VAR_GLOBAL
	
	LineAngle				: REAL;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>