<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.7">
  <POU Name="POU_DT02_MotorControl" Id="{4c9b7adf-695a-4329-8669-b200073d6e6c}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM POU_DT02_MotorControl
VAR
	
	fbHaltLeftMotor			: MC_Halt;
	fbHaltRightMotor		: MC_Halt;
	fbJogLeftMotor			: MC_Jog;
	fbJogRightMotor			: MC_Jog;
	testOnlineEdit			: BOOL;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF NOT SystemON THEN
	
	HaltLeftMotor 			:= TRUE;
	HaltRightMotor 			:= TRUE;
	JogLeftMotor 			:= FALSE;
	JogRightMotor 			:= FALSE;
	
ELSE
	
	IF LeftLimitExceeded THEN
		
		HaltLeftMotor 		:= TRUE;
		JogLeftMotor 		:= FALSE;
		
	ELSE
		
		HaltLeftMotor 		:= FALSE;
		JogLeftMotor 		:= TRUE;
		
	END_IF
		
	IF RightLimitExceeded THEN
		
		HaltRightMotor 		:= TRUE;
		JogRightMotor 		:= FALSE;
		
	ELSE
		
		HaltRightMotor 		:= FALSE;
		JogRightMotor 		:= TRUE;
		
	END_IF
IF TRUE THEN
    testOnlineEdit			:= TRUE;
END_IF
	
END_IF

fbHaltLeftMotor(
	Axis					:= LeftMotor,
	Execute					:= HaltLeftMotor);
	
fbHaltRightMotor(
	Axis					:= RightMotor,
	Execute					:= HaltRightMotor);

fbJogLeftMotor(
	Axis					:= LeftMotor,
	JogForward				:= JogLeftMotor,
	Velocity				:= 500.0,
	Acceleration			:= 250.0,
	Deceleration			:= 500.0,
	Mode					:= E_JogMode.MC_JOGMODE_CONTINOUS);
	
fbJogRightMotor(
	Axis					:= RightMotor,
	JogForward				:= JogRightMotor,
	Velocity				:= 500.0,
	Acceleration			:= 250.0,
	Deceleration			:= 500.0,
	Mode					:= E_JogMode.MC_JOGMODE_CONTINOUS);
	
]]></ST>
    </Implementation>
    <LineIds Name="POU_DT02_MotorControl">
      <LineId Id="39" Count="0" />
      <LineId Id="69" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="47" Count="1" />
      <LineId Id="70" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="53" Count="0" />
      <LineId Id="72" Count="0" />
      <LineId Id="54" Count="0" />
      <LineId Id="64" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="75" Count="0" />
      <LineId Id="57" Count="2" />
      <LineId Id="76" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="77" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="78" Count="0" />
      <LineId Id="67" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="79" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="80" Count="0" />
      <LineId Id="90" Count="2" />
      <LineId Id="68" Count="0" />
      <LineId Id="51" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="33" Count="2" />
      <LineId Id="37" Count="1" />
      <LineId Id="36" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="13" Count="1" />
      <LineId Id="21" Count="2" />
      <LineId Id="15" Count="1" />
      <LineId Id="18" Count="2" />
      <LineId Id="25" Count="1" />
      <LineId Id="24" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="27" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>